ingress-angular.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: angular-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: my-angular-app.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: angular-service
            port:
              name: http
